# aoc2025

./: .gitignore  aoc2025.opam  dune-project
day01/: common.ml  dune  main.ml  p1.ml  p2.ml
day02/: main.ml  p1.ml  p2.ml
day03/: main.ml
day04/: dune  main.ml
day05/: main.ml
day06/: main.ml
day07/: dune  main.ml
day08/: main.ml
day09/: main.ml
day10/: dune  main.ml
day11/: main.ml
lib/: utils.ml
