(lang dune 3.20)

(name aoc2025)

(generate_opam_files true)

(source
 (github jalsol/aoc2025))

(authors "Nguyen Quang Truong <nqtruong.1002@gmail.com>")

(package
 (name aoc2025)
 (synopsis "Advent of Code 2025"))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
